[gd_scene load_steps=14 format=4 uid="uid://bpcaic7uduoyk"]

[ext_resource type="Texture2D" uid="uid://cyi447eykji1w" path="res://world/plains.png" id="1_31ish"]
[ext_resource type="Script" uid="uid://7q4i7rxoee3h" path="res://cliff_side/cliff_side.gd" id="1_kq5jo"]
[ext_resource type="Texture2D" uid="uid://b6cdw4dnevuvf" path="res://world/grass.png" id="2_w4ypn"]
[ext_resource type="Texture2D" uid="uid://bqohls8h6qlmn" path="res://world/objects.png" id="3_kq5jo"]
[ext_resource type="PackedScene" uid="uid://cemn5xknrhbc1" path="res://player/player.tscn" id="4_w4ypn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fwwbe"]
texture = ExtResource("1_31ish")
4:0/0 = 0
5:0/0 = 0
5:1/0 = 0
4:1/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:1/0 = 0
2:1/0 = 0
1:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m2msg"]
texture = ExtResource("2_w4ypn")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ktnhl"]
sources/0 = SubResource("TileSetAtlasSource_fwwbe")
sources/1 = SubResource("TileSetAtlasSource_m2msg")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mg6w2"]
texture = ExtResource("3_kq5jo")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, 8, 5.93534, 8, 8, 1.61873, -8, 1.61873)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.59916, 6.19306, 7.00526, 6.19306, 6.90374, 1.52288, -7.00526, 1.62441)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 3.59718, -4.49647, 8, 5.75548, 8, 8, 5.03605, 8, -2.1583, 1.61873, -8, -2.87774, -8, -8, -0.899294)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.0599, 13.6932, -11.5866, 21.5932, -5.64474, 26.5303, 6.06459, 25.1914, 12.1292, 19.5933, 9.33014, 12.5957)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.6477, 10.2519, -11.6908, 14.7484, 0.719435, 14.7484, 6.29506, 13.3095, 10.4318, 13.4894, 15.4679, 7.37421, 14.7484, 1.79859, -13.6693, 2.51802, -15.6477, 8.81308)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.69125, 18.4806, -2.86768, 21.3483, 1.27452, 20.711, 6.69125, 17.8433, 3.50494, 12.4266, -4.46083, 12.4266)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.2304, -1.07915, -12.5901, 6.1152, -8, 8, -4.85619, 9.53251, 1.07915, 9.89223, 8.99294, 9.35266, 10.7915, 5.57562, 12.5901, 1.97845, 8, -3.59717, 3.41732, -8, -5.03604, -8)

[sub_resource type="TileSet" id="TileSet_10ia1"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_mg6w2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_31ish"]
texture = ExtResource("1_31ish")
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0

[sub_resource type="TileSet" id="TileSet_w4ypn"]
sources/0 = SubResource("TileSetAtlasSource_31ish")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4ypn"]
size = Vector2(56, 17)

[node name="cliff_side" type="Node2D"]
script = ExtResource("1_kq5jo")

[node name="Ground" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(-3, 27)
tile_map_data = PackedByteArray("AAABAAIAAAABAAAAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAABAAUAAAABAAIAAAACAAIAAAACAAAAAAACAAMAAAACAAEAAAACAAQAAAACAAEAAAACAAUAAAAFAAAAAAACAAYAAAABAAIAAAADAAAAAAABAAAAAAADAAEAAAABAAEAAAADAAIAAAAFAAEAAAADAAMAAAACAAEAAAADAAQAAAACAAEAAAADAAUAAAACAAEAAAADAAYAAAACAAIAAAAEAAAAAAACAAAAAAAEAAEAAAACAAEAAAAEAAIAAAACAAEAAAAEAAMAAAACAAEAAAAEAAQAAAACAAEAAAAEAAUAAAACAAEAAAAEAAYAAAAFAAAAAAAFAAAAAAACAAAAAAAFAAEAAAACAAEAAAAFAAIAAAACAAEAAAAFAAMAAAACAAEAAAAFAAQAAAACAAEAAAAFAAUAAAACAAEAAAAFAAYAAAACAAEAAAAGAAAAAAACAAAAAAAGAAEAAAACAAEAAAAGAAIAAAACAAEAAAAGAAMAAAACAAEAAAAGAAQAAAACAAEAAAAGAAUAAAACAAEAAAAGAAYAAAACAAEAAAAHAAAAAAACAAAAAAAHAAEAAAACAAEAAAAHAAIAAAACAAEAAAAHAAMAAAACAAEAAAAHAAQAAAACAAEAAAAHAAUAAAACAAEAAAAHAAYAAAAEAAAAAAAIAAAAAAADAAAAAAAIAAEAAAAEAAEAAAAIAAIAAAACAAEAAAAIAAMAAAACAAEAAAAIAAQAAAACAAEAAAAIAAUAAAACAAEAAAAIAAYAAAACAAIAAAAJAAEAAAADAAAAAAAJAAIAAAADAAEAAAAJAAMAAAADAAEAAAAJAAQAAAADAAEAAAAJAAUAAAADAAEAAAAJAAYAAAADAAIAAAABAAYAAQAAAAAAAAAJAAAAAQAAAAAAAAACAAEAAQAAAAAAAAABAAEAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAABAP//AQAAAAAAAAACAP//AQAAAAAAAAADAP//AQAAAAAAAAAEAP//AQAAAAAAAAAFAP//AQAAAAAAAAAGAP//AQAAAAAAAAAHAP//AQAAAAAAAAAIAP//AQAAAAAAAAAJAP//AQAAAAAAAAAKAP//AQAAAAAAAAALAP//AQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAAFAAcAAAACAAEAAAAGAAcAAAACAAEAAAAHAAcAAAADAAEAAAAEAAcAAAABAAEAAAAEAAgAAAABAAEAAAAFAAgAAAACAAEAAAAGAAgAAAACAAEAAAAHAAgAAAADAAEAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAAAAP//AQAAAAAAAAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAD/////AQAAAAAAAAD//wAAAQAAAAAAAAD//wEAAQAAAAAAAAD//wIAAQAAAAAAAAD//wMAAQAAAAAAAAD//wQAAQAAAAAAAAD//wUAAQAAAAAAAAD//wYAAQAAAAAAAAD//wcAAQAAAAAAAAD//wgAAQAAAAAAAAD///7/AQAAAAAAAAAAAP7/AQAAAAAAAAABAP7/AQAAAAAAAAACAP7/AQAAAAAAAAADAP7/AQAAAAAAAAAEAP7/AQAAAAAAAAAFAP7/AQAAAAAAAAAGAP7/AQAAAAAAAAAHAP7/AQAAAAAAAAAIAP7/AQAAAAAAAAAJAP7/AQAAAAAAAAAKAP7/AQAAAAAAAAALAP7/AQAAAAAAAAAEAAkAAQAAAAAAAAAFAAkAAQAAAAAAAAAGAAkAAQAAAAAAAAAHAAkAAQAAAAAAAAD//wkAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAkAAQAAAAAAAAACAAkAAQAAAAAAAAADAAkAAQAAAAAAAAAIAAkAAQAAAAAAAAAJAAkAAQAAAAAAAAAKAAkAAQAAAAAAAAALAAkAAQAAAAAAAAAQAPr/AQAAAAAAAAAQAPv/AQAAAAAAAAAQAPz/AQAAAAAAAAAQAP3/AQAAAAAAAAAQAP7/AQAAAAAAAAAQAP//AQAAAAAAAAAQAAAAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAAAAAAQAAwAAQAAAAAAAAARAPr/AQAAAAAAAAARAPv/AQAAAAAAAAARAPz/AQAAAAAAAAARAP3/AQAAAAAAAAARAP7/AQAAAAAAAAARAP//AQAAAAAAAAARAAAAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAARAAoAAQAAAAAAAAARAAsAAQAAAAAAAAARAAwAAQAAAAAAAAASAPr/AQAAAAAAAAASAPv/AQAAAAAAAAASAPz/AQAAAAAAAAASAP3/AQAAAAAAAAASAP7/AQAAAAAAAAASAP//AQAAAAAAAAASAAAAAQAAAAAAAAASAAEAAQAAAAAAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAASAAoAAQAAAAAAAAASAAsAAQAAAAAAAAASAAwAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_ktnhl")

[node name="Ysort" type="TileMapLayer" parent="."]
y_sort_enabled = true
position = Vector2(-3, 27)
tile_set = SubResource("TileSet_10ia1")

[node name="Cliff" type="TileMapLayer" parent="."]
position = Vector2(-3, 27)
tile_map_data = PackedByteArray("AAADAP//AAACAAYAAAAEAP//AAACAAYAAAAFAP//AAACAAYAAAAGAP//AAACAAYAAAAHAP//AAACAAYAAAADAP7/AAACAAUAAAAEAP7/AAACAAUAAAAFAP7/AAACAAUAAAAGAP7/AAACAAUAAAAHAP7/AAACAAUAAAAAAP7/AAACAAUAAAABAP7/AAACAAUAAAACAP7/AAACAAUAAAAAAP//AAACAAUAAAABAP//AAACAAUAAAACAP//AAAEAAQAAAACAAAAAAADAAUAAAABAAAAAAACAAUAAAAAAAAAAAACAAUAAAAAAAEAAAAEAAQAAAAAAAIAAAADAAUAAAAAAAMAAAADAAUAAAAAAAQAAAADAAUAAAAAAAUAAAADAAUAAAABAAEAAAACAAYAAAAIAP7/AAACAAUAAAAIAP//AAACAAYAAAAJAP7/AAACAAUAAAAJAP//AAAFAAQAAAAJAAAAAAABAAYAAAAKAP7/AAACAAUAAAAKAP//AAACAAUAAAAKAAAAAAAFAAQAAAAKAAEAAAABAAUAAAAKAAIAAAABAAUAAAAKAAMAAAABAAUAAAAKAAQAAAABAAUAAAAKAAUAAAABAAUAAAAKAAYAAAABAAUAAAALAP7/AAACAAUAAAALAP//AAACAAUAAAALAAAAAAACAAUAAAALAAEAAAACAAUAAAALAAIAAAACAAUAAAALAAMAAAACAAUAAAALAAQAAAACAAUAAAALAAUAAAACAAUAAAALAAYAAAACAAUAAAACAAEAAAADAAYAAAD///7/AAACAAUAAAD/////AAACAAUAAAD//wAAAAACAAUAAAD//wEAAAACAAUAAAD//wIAAAACAAUAAAD//wMAAAACAAUAAAD//wQAAAACAAUAAAD//wUAAAACAAUAAAD//wYAAAACAAUAAAD//wcAAAACAAUAAAD//wgAAAACAAUAAAAAAAYAAAAEAAUAAAAAAAcAAAACAAUAAAAAAAgAAAACAAUAAAABAAcAAAAEAAUAAAABAAgAAAACAAUAAAACAAcAAAACAAQAAAACAAgAAAACAAUAAAAJAAcAAAACAAQAAAAJAAgAAAACAAUAAAAKAAcAAAAFAAUAAAAKAAgAAAACAAUAAAALAAcAAAACAAUAAAALAAgAAAACAAUAAAAIAAcAAAABAAQAAAAIAAgAAAABAAUAAAADAAcAAAADAAQAAAADAAgAAAADAAUAAAABAAYAAAADAAQAAAD//wkAAAACAAUAAAD//woAAAACAAUAAAD//wsAAAACAAUAAAD//wwAAAACAAUAAAAAAAkAAAACAAUAAAAAAAoAAAACAAUAAAAAAAsAAAACAAUAAAAAAAwAAAACAAUAAAABAAkAAAACAAUAAAABAAoAAAACAAUAAAABAAsAAAACAAUAAAABAAwAAAACAAUAAAACAAkAAAACAAUAAAACAAoAAAACAAUAAAACAAsAAAACAAUAAAACAAwAAAACAAUAAAADAAkAAAAEAAUAAAADAAoAAAACAAUAAAADAAsAAAACAAUAAAADAAwAAAACAAUAAAAEAAkAAAACAAQAAAAEAAoAAAACAAUAAAAEAAsAAAACAAUAAAAEAAwAAAACAAUAAAAFAAkAAAACAAQAAAAFAAoAAAACAAUAAAAFAAsAAAACAAUAAAAFAAwAAAACAAUAAAAGAAkAAAACAAQAAAAGAAoAAAACAAUAAAAGAAsAAAACAAUAAAAGAAwAAAACAAUAAAAHAAkAAAACAAQAAAAHAAoAAAACAAUAAAAHAAsAAAACAAUAAAAHAAwAAAACAAUAAAAIAAkAAAAFAAUAAAAIAAoAAAACAAUAAAAIAAsAAAACAAUAAAAIAAwAAAACAAUAAAAJAAkAAAACAAUAAAAJAAoAAAACAAUAAAAJAAsAAAACAAUAAAAJAAwAAAACAAUAAAAKAAkAAAACAAUAAAAKAAoAAAACAAUAAAAKAAsAAAACAAUAAAAKAAwAAAACAAUAAAALAAkAAAACAAUAAAALAAoAAAACAAUAAAALAAsAAAACAAUAAAALAAwAAAACAAUAAAAMAP7/AAACAAUAAAAMAP//AAACAAUAAAAMAAAAAAACAAUAAAAMAAEAAAACAAUAAAAMAAIAAAACAAUAAAAMAAMAAAACAAUAAAAMAAQAAAACAAUAAAAMAAUAAAACAAUAAAAMAAYAAAACAAUAAAAMAAcAAAACAAUAAAAMAAgAAAACAAUAAAAMAAkAAAACAAUAAAAMAAoAAAACAAUAAAAMAAsAAAACAAUAAAAMAAwAAAACAAUAAAANAP7/AAACAAUAAAANAP//AAACAAUAAAANAAAAAAACAAUAAAANAAEAAAACAAUAAAANAAIAAAACAAUAAAANAAMAAAACAAUAAAANAAQAAAACAAUAAAANAAUAAAACAAUAAAANAAYAAAACAAUAAAANAAcAAAACAAUAAAANAAgAAAACAAUAAAANAAkAAAACAAUAAAANAAoAAAACAAUAAAANAAsAAAACAAUAAAANAAwAAAACAAUAAAAOAP7/AAACAAUAAAAOAP//AAACAAUAAAAOAAAAAAACAAUAAAAOAAEAAAACAAUAAAAOAAIAAAACAAUAAAAOAAMAAAACAAUAAAAOAAQAAAACAAUAAAAOAAUAAAACAAUAAAAOAAYAAAACAAUAAAAOAAcAAAACAAUAAAAOAAgAAAACAAUAAAAOAAkAAAACAAUAAAAOAAoAAAACAAUAAAAOAAsAAAACAAUAAAAOAAwAAAACAAUAAAAPAP7/AAACAAUAAAAPAP//AAACAAUAAAAPAAAAAAACAAUAAAAPAAEAAAACAAUAAAAPAAIAAAACAAUAAAAPAAMAAAACAAUAAAAPAAQAAAACAAUAAAAPAAUAAAACAAUAAAAPAAYAAAACAAUAAAAPAAcAAAACAAUAAAAPAAgAAAACAAUAAAAPAAkAAAACAAUAAAAPAAoAAAACAAUAAAAPAAsAAAACAAUAAAAPAAwAAAACAAUAAAD///v/AAACAAUAAAD///z/AAACAAUAAAD///3/AAACAAUAAAAAAPv/AAACAAUAAAAAAPz/AAACAAUAAAAAAP3/AAACAAUAAAABAPv/AAACAAUAAAABAPz/AAACAAUAAAABAP3/AAACAAUAAAACAPv/AAACAAUAAAACAPz/AAACAAUAAAACAP3/AAACAAUAAAADAPv/AAACAAUAAAADAPz/AAACAAUAAAADAP3/AAACAAUAAAAEAPv/AAACAAUAAAAEAPz/AAACAAUAAAAEAP3/AAACAAUAAAAFAPv/AAACAAUAAAAFAPz/AAACAAUAAAAFAP3/AAACAAUAAAAGAPv/AAACAAUAAAAGAPz/AAACAAUAAAAGAP3/AAACAAUAAAAHAPv/AAACAAUAAAAHAPz/AAACAAUAAAAHAP3/AAACAAUAAAAIAPv/AAACAAUAAAAIAPz/AAACAAUAAAAIAP3/AAACAAUAAAAJAPv/AAACAAUAAAAJAPz/AAACAAUAAAAJAP3/AAACAAUAAAAKAPv/AAACAAUAAAAKAPz/AAACAAUAAAAKAP3/AAACAAUAAAALAPv/AAACAAUAAAALAPz/AAACAAUAAAALAP3/AAACAAUAAAAMAPv/AAACAAUAAAAMAPz/AAACAAUAAAAMAP3/AAACAAUAAAANAPv/AAACAAUAAAANAPz/AAACAAUAAAANAP3/AAACAAUAAAAOAPv/AAACAAUAAAAOAPz/AAACAAUAAAAOAP3/AAACAAUAAAAPAPv/AAACAAUAAAAPAPz/AAACAAUAAAAPAP3/AAACAAUAAAD6//r/AAACAAUAAAD6//v/AAACAAUAAAD6//z/AAACAAUAAAD6//3/AAACAAUAAAD6//7/AAACAAUAAAD6////AAACAAUAAAD6/wAAAAACAAUAAAD6/wEAAAACAAUAAAD6/wIAAAACAAUAAAD6/wMAAAACAAUAAAD6/wQAAAACAAUAAAD6/wUAAAACAAUAAAD6/wYAAAACAAUAAAD6/wcAAAACAAUAAAD6/wgAAAACAAUAAAD6/wkAAAACAAUAAAD6/woAAAACAAUAAAD6/wsAAAACAAUAAAD6/wwAAAACAAUAAAD7//r/AAACAAUAAAD7//v/AAACAAUAAAD7//z/AAACAAUAAAD7//3/AAACAAUAAAD7//7/AAACAAUAAAD7////AAACAAUAAAD7/wAAAAACAAUAAAD7/wEAAAACAAUAAAD7/wIAAAACAAUAAAD7/wMAAAACAAUAAAD7/wQAAAACAAUAAAD7/wUAAAACAAUAAAD7/wYAAAACAAUAAAD7/wcAAAACAAUAAAD7/wgAAAACAAUAAAD7/wkAAAACAAUAAAD7/woAAAACAAUAAAD7/wsAAAACAAUAAAD7/wwAAAACAAUAAAD8//r/AAACAAUAAAD8//v/AAACAAUAAAD8//z/AAACAAUAAAD8//3/AAACAAUAAAD8//7/AAACAAUAAAD8////AAACAAUAAAD8/wAAAAACAAUAAAD8/wEAAAACAAUAAAD8/wIAAAACAAUAAAD8/wMAAAACAAUAAAD8/wQAAAACAAUAAAD8/wUAAAACAAUAAAD8/wYAAAACAAUAAAD8/wcAAAACAAUAAAD8/wgAAAACAAUAAAD8/wkAAAACAAUAAAD8/woAAAACAAUAAAD8/wsAAAACAAUAAAD8/wwAAAACAAUAAAD9//r/AAACAAUAAAD9//v/AAACAAUAAAD9//z/AAACAAUAAAD9//3/AAACAAUAAAD9//7/AAACAAUAAAD9////AAACAAUAAAD9/wAAAAACAAUAAAD9/wEAAAACAAUAAAD9/wIAAAACAAUAAAD9/wMAAAACAAUAAAD9/wQAAAACAAUAAAD9/wUAAAACAAUAAAD9/wYAAAACAAUAAAD9/wcAAAACAAUAAAD9/wgAAAACAAUAAAD9/wkAAAACAAUAAAD9/woAAAACAAUAAAD9/wsAAAACAAUAAAD9/wwAAAACAAUAAAD+//r/AAACAAUAAAD+//v/AAACAAUAAAD+//z/AAACAAUAAAD+//3/AAACAAUAAAD+//7/AAACAAUAAAD+////AAACAAUAAAD+/wAAAAACAAUAAAD+/wEAAAACAAUAAAD+/wIAAAACAAUAAAD+/wMAAAACAAUAAAD+/wQAAAACAAUAAAD+/wUAAAACAAUAAAD+/wYAAAACAAUAAAD+/wcAAAACAAUAAAD+/wgAAAACAAUAAAD+/wkAAAACAAUAAAD+/woAAAACAAUAAAD+/wsAAAACAAUAAAD+/wwAAAACAAUAAAD///r/AAACAAUAAAAAAPr/AAACAAUAAAABAPr/AAACAAUAAAACAPr/AAACAAUAAAADAPr/AAACAAUAAAAEAPr/AAACAAUAAAAFAPr/AAACAAUAAAAGAPr/AAACAAUAAAAHAPr/AAACAAUAAAAIAPr/AAACAAUAAAAJAPr/AAACAAUAAAAKAPr/AAACAAUAAAALAPr/AAACAAUAAAAMAPr/AAACAAUAAAANAPr/AAACAAUAAAAOAPr/AAACAAUAAAAPAPr/AAACAAUAAAAQAPr/AAACAAUAAAAQAPv/AAACAAUAAAAQAPz/AAACAAUAAAAQAP3/AAACAAUAAAAQAP7/AAACAAUAAAAQAP//AAACAAUAAAAQAAAAAAACAAUAAAAQAAEAAAACAAUAAAAQAAIAAAACAAUAAAAQAAMAAAACAAUAAAAQAAQAAAACAAUAAAAQAAUAAAACAAUAAAAQAAYAAAACAAUAAAAQAAcAAAACAAUAAAAQAAgAAAACAAUAAAAQAAkAAAACAAUAAAAQAAoAAAACAAUAAAAQAAsAAAACAAUAAAAQAAwAAAACAAUAAAARAP3/AAACAAUAAAARAP7/AAACAAUAAAARAP//AAACAAUAAAARAAAAAAACAAUAAAARAAEAAAACAAUAAAARAAIAAAACAAUAAAARAAMAAAACAAUAAAARAAQAAAACAAUAAAARAAUAAAACAAUAAAARAAYAAAACAAUAAAARAAcAAAACAAUAAAARAAgAAAACAAUAAAARAAkAAAACAAUAAAARAAoAAAACAAUAAAARAAsAAAACAAUAAAARAAwAAAACAAUAAAASAP3/AAACAAUAAAASAP7/AAACAAUAAAASAP//AAACAAUAAAASAAAAAAACAAUAAAASAAEAAAACAAUAAAASAAIAAAACAAUAAAASAAMAAAACAAUAAAASAAQAAAACAAUAAAASAAUAAAACAAUAAAASAAYAAAACAAUAAAASAAcAAAACAAUAAAASAAgAAAACAAUAAAASAAkAAAACAAUAAAASAAoAAAACAAUAAAASAAsAAAACAAUAAAASAAwAAAACAAUAAAARAPr/AAACAAUAAAARAPv/AAACAAUAAAARAPz/AAACAAUAAAASAPr/AAACAAUAAAASAPv/AAACAAUAAAASAPz/AAACAAUAAAA=")
tile_set = SubResource("TileSet_w4ypn")

[node name="Player" parent="." instance=ExtResource("4_w4ypn")]
position = Vector2(92, 148)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-3, 27)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(47, -2, 144, -1, 148, 12, 162, 15, 164, 113, 136, 117, 131, 124, 132, 145, 131, 152, 63, 152, 63, 143, 59, 115, 51, 114, 33, 116, 27, 100, 14, 98, 12, 31, 45, 30, 46, 2, 32, 3, 32, 13, 3, 14, 2, 100, 21, 119, 25, 130, 48, 130, 49, 167, 133, 168, 148, 168, 148, 126, 178, 126, 180, 14, 162, -7, 156, -25, 52, -23, 32, -18, 32, 3)

[node name="CliffSideExitPoint" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CliffSideExitPoint"]
position = Vector2(92, 170.5)
shape = SubResource("RectangleShape2D_w4ypn")

[connection signal="body_entered" from="CliffSideExitPoint" to="." method="_on_cliff_side_exit_point_body_entered"]
[connection signal="body_exited" from="CliffSideExitPoint" to="." method="_on_cliff_side_exit_point_body_exited"]
